Refactor `ProvisionService` and `CreateIncidentParameterMapper` to support multi-parameter mapping, update `workflowJobId` to `workflowId` in tests, and improve null and empty value handling logic.