@@ -3,10 +3,10 @@ package org.opendevstack.component_provisioner.server.mappers;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.ReportingPolicy;
+import org.opendevstack.component_provisioner.client.component_catalog.v1.model.CatalogItemUserActionParameter;
 import org.opendevstack.component_provisioner.client.component_catalog.v1.model.ProjectComponentParameter;
+import org.opendevstack.component_provisioner.server.controllers.validators.ParameterType;
 import org.opendevstack.component_provisioner.server.model.CreateIncidentParameter;
-
-import java.util.List;
 
 @Mapper(
         componentModel = "spring",
@@ -14,27 +14,26 @@ import java.util.List;
 )
 public interface CreateIncidentParameterMapper {
 
-    @Mapping(target = "name", source = "name")
-
+    @Mapping(target = "name", source = "param.name")
+    @Mapping(target = "type", source = "param.type")
     @Mapping(
             target = "value",
-            expression = "java(getFirstValue(source.getValues()))"
+            expression = "java(resolveValue(param.getType(), componentValue))"
     )
-
-    @Mapping(
-            target = "type",
-            constant = "string"
-    )
-
-
     CreateIncidentParameter toTarget(
-            ProjectComponentParameter source
+            CatalogItemUserActionParameter param,
+            ProjectComponentParameter componentValue
     );
 
-    default Object getFirstValue(List<String> values) {
+    default Object resolveValue(String type, ProjectComponentParameter componentValue) {
+        if (ParameterType.MULTIPLELIST.getValue().equals(type)) {
+            return componentValue;
+        }
+        var values = componentValue.getValues();
         if (values == null || values.isEmpty()) {
             return null;
         }
-        return values.get(0);
+        return values.getFirst();
     }
 }
+ 
